trying to fix graphs on mobile.

--- a/src/sass/graphs.scss
+++ b/src/sass/graphs.scss
@@ -1,4 +1,10 @@
 .column.chart{
   min-height:300px;
-  height: 400px;
+  width: 100%;
+***REMOVED***
+
+.chart-container {
+  position: relative;
+  height:40vh;
+  width:80vw;
 ***REMOVED***
